<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/card_padding">

        <TextView
            android:id="@+id/identifier"
            style="@style/Text.Text"
            android:layout_width="@dimen/card_nearby_navaid_id_column_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:text="@string/card_id" />

        <TextView
            style="@style/Text.Text"
            android:layout_width="@dimen/card_nearby_navaid_frequency_column_width"
            android:layout_height="wrap_content"
            android:text="@string/card_frequency" />

        <TextView
            style="@style/Text.Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/card_name" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp">

            <TextView
                style="@style/Text.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/card_distance" />

        </RelativeLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cardLineColor" />

    <view
        android:id="@+id/in_card_list"
        class="com.shinestudio.app.airway.widget.InCardListLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/card_padding" />

</LinearLayout>