<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/primaryDarkColor">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_revert" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/name"
                style="@style/Text.PrimaryText.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="Princess Juliana Int&apos;l Airport" />

            <TextView
                android:id="@+id/location"
                style="@style/Text.Text.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/name"
                android:layout_below="@+id/name"
                android:text="Netherlands" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        style="@style/Panel"
        android:paddingLeft="@dimen/card_padding"
        android:paddingRight="@dimen/card_padding"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/key"
                style="@style/Text.KeyTitle.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_detail_code" />

            <TextView
                android:id="@+id/icao"
                style="@style/Text.HeavyText.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/key"
                android:layout_below="@+id/key"
                android:text="TNCM" />

            <TextView
                android:id="@+id/iata"
                style="@style/Text.MicroText.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/icao"
                android:layout_toEndOf="@id/icao"
                android:text="/SXM" />

        </RelativeLayout>


        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/key"
                style="@style/Text.KeyTitle.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_detail_runway" />

            <TextView
                android:id="@+id/rwy"
                style="@style/Text.HeavyText.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/key"
                android:layout_below="@+id/key"
                android:text="4" />
        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/key"
                style="@style/Text.KeyTitle.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_detail_ta" />

            <TextView
                android:id="@+id/ta"
                style="@style/Text.HeavyText.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/key"
                android:layout_below="@+id/key"
                android:text="50000" />

            <TextView
                android:id="@+id/ta_unit"
                style="@style/Text.MicroText.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/ta"
                android:layout_toEndOf="@+id/ta"
                android:text="@string/unit_ft" />

        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/key"
                style="@style/Text.KeyTitle.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_detail_tl" />

            <TextView
                android:id="@+id/tl"
                style="@style/Text.HeavyText.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/key"
                android:layout_below="@+id/key"
                android:text="5000" />

            <TextView
                android:id="@+id/tl_unit"
                style="@style/Text.MicroText.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tl"
                android:layout_toEndOf="@+id/tl"
                android:text="@string/unit_ft" />
        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/key"
                style="@style/Text.KeyTitle.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_detail_el" />

            <TextView
                android:id="@+id/el"
                style="@style/Text.HeavyText.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/key"
                android:layout_below="@+id/key"
                android:text="436" />

            <TextView
                android:id="@+id/textView"
                style="@style/Text.MicroText.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/el"
                android:layout_alignParentStart="false"
                android:layout_toEndOf="@id/el"
                android:text="@string/unit_ft" />
        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right">

            <TextView
                android:id="@+id/key"
                style="@style/Text.KeyTitle.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_detail_loc" />

            <TextView
                android:id="@+id/latitude"
                style="@style/Text.HeavyText.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/key"
                android:layout_below="@+id/key"
                android:text="N20.4645235"
                android:textSize="@dimen/microTextSize" />

            <TextView
                android:id="@+id/longitude"
                style="@style/Text.HeavyText.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/key"
                android:layout_below="@+id/latitude"
                android:text="S114.4564863"
                android:textSize="@dimen/microTextSize" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>